terraform/subnets.tf
resource "aws_subnet" "public_1" {
  vpc_id                        = aws_vpc.vpc.id 
  cidr_block                    = "10.0.10.0/24"
  availability_zone             = "us-east-1a"
  map_public_ip_on_launch       = true
  tags = {
 
    Name                        = "public_us_east_1a"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes.io/role/elb" = 1
 
  }
}
resource "aws_subnet" "private_1" {
  vpc_id                        = aws_vpc.vpc.id 
  cidr_block                    = "10.0.20.0/24"
  availability_zone             = "us-east-1b"
  map_public_ip_on_launch       = true
 
  tags = {
 
    Name                        = "public_us_east_1b"
    "kubernetes.io/cluster/eks" = "shared"
    "kubernetes.io/role/elb" = 1
 
  }
}
